# rust-sst-ion-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  package.json  pnpm-lock.yaml  pre-script.rhai  rust-toolchain.toml  sst.config.ts  template.env
.github/: FUNDING.yml
.github/workflows/: deploy-prod.yml
src/: env.rs  errors.rs  lib.rs  types.rs
src/aws/: mod.rs  s3.rs  sqs.rs
src/controllers/: mod.rs
src/controllers/dev/: controller.rs  mod.rs
src/models/: ping.rs
